--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,24 @@ _Pvt_Extensions
 /Videoteka.ndproj
 /.mfractor
 src/WebUI/ClientApp/package-lock.json
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
