Add a video endpoint

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "blobServiceUri": "https://vidstorage1.blob.core.windows.net",
+  "videoContainerName": "user-videos"
 }
