add uploader id to video

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=dev.db"
+    "DefaultConnection": "<MYSQL-CONNECTION-STRING>"
   },
   "Logging": {
     "LogLevel": {
@@ -10,6 +10,10 @@
     }
   },
   "AllowedHosts": "*",
-  "blobServiceUri": "https://vidstorage1.blob.core.windows.net",
-  "videoContainerName": "user-videos"
+  "Azure": {
+    "BlobStorage": {
+      "ContainerName": "<CONTAINER-NAME>",
+      "ConnectionString": "<CONNECTION-STRING>"
+    }
+  }
 }
