--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -9,9 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Accord.Video.FFMPEG" Version="3.8.0" />
         <PackageReference Include="Azure.Identity" Version="1.8.2" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
         <PackageReference Include="CsvHelper" Version="30.0.1" />
+        <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.2" />
@@ -21,6 +23,8 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+        <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+        <PackageReference Include="xFFmpeg.NET" Version="7.1.3" />
     </ItemGroup>
 
     <ItemGroup>
